fix(ci): resolve ruff linting errors in tests/conftest.py
- Remove unused enum imports (F401): AirlineProvider, CurrencyCode, DataSource, TripStatus, TripType, TripVisibility, UserRole
- Fix line length violation (E501) in mock_auth_service fixture
- Add ruff config exception for E402 in tests/conftest.py to allow environment setup before imports
- This resolves the failing Backend CI tests in PR #212

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ lint.select = ["E", "F", "B", "I"]
 [tool.ruff.lint.per-file-ignores]
 "tripsage/api/routers/*.py" = ["B008"]  # Allow Depends() in FastAPI routers
 "tripsage/api/core/*.py" = ["B008"]  # Allow Depends() in FastAPI dependencies
+"tests/conftest.py" = ["E402"]  # Allow imports after code execution for environment setup
 
 [build-system]
 requires = ["hatchling"]
