fix(tests): resolve import errors and pytest configuration issues
- Fix ResourceNotFoundError import: use CoreResourceNotFoundError instead
- Fix AirlineProvider enum references: AMERICAN_AIRLINES -> AMERICAN
- Remove unsupported 'env' section from pytest.ini (requires pytest-env plugin)
- These fixes resolve the remaining CI test collection errors

--- a/pytest.ini
+++ b/pytest.ini
@@ -60,12 +60,5 @@ filterwarnings =
     ignore:.*httpx.*:DeprecationWarning
     ignore:.*pydantic.*:DeprecationWarning
 
-# Environment variables for testing
-env =
-    ENVIRONMENT = testing
-    TRIPSAGE_TEST_MODE = true
-    DEBUG = true
-    LOG_LEVEL = WARNING
-    OPENBLAS_NUM_THREADS = 1
-    MKL_NUM_THREADS = 1
-    NUMEXPR_NUM_THREADS = 1
+# Environment variables for testing are set by CI/test runner
+# No env section needed as variables are configured externally
