--- a/pytest.ini
+++ b/pytest.ini
@@ -19,6 +19,8 @@ addopts =
     --cov-fail-under=95
     --cov-branch
     --no-cov-on-fail
+    --timeout=60
+    --timeout-method=thread
     -ra
 
 # Async test configuration
