--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,52 +6,64 @@ readme = "README.md"
 requires-python = ">=3.12"
 authors = [{ name = "TripSage Team" }]
 dependencies = [
+    # Core web framework and async support
     "aiofiles>=24.1.0",
-    "crawl4ai>=0.6.3",
-    "cryptography>=45.0.3",
-    "email-validator>=2.2.0",
     "fastapi>=0.115.12",
+    "uvicorn>=0.34.2",
+    "httpx>=0.28.1",
+    "python-multipart>=0.0.20",
+    
+    # Authentication and security
+    "passlib[bcrypt]>=1.7.4",
+    "python-jose[cryptography]>=3.5.0",
+    "cryptography>=45.0.3",
+    
+    # Data validation and configuration
+    "pydantic>=2.11.5",
+    "pydantic-settings>=2.9.1",
+    "email-validator>=2.2.0",
+    "python-dotenv>=1.1.0",
+    
+    # Database and caching
+    "sqlalchemy[asyncio]>=2.0.41",
+    "greenlet>=3.1.1",
+    "redis>=6.2.0",
+    "supabase>=2.15.2",
+    
+    # AI and LLM ecosystem
+    "langchain-core>=0.3.63",
+    "langchain-openai>=0.3.19",
+    "langgraph>=0.4.8",
+    "langsmith>=0.3.42",
+    "openai>=1.78.0",
+    "mem0ai>=0.1.104",
+    "tenacity>=9.1.2",
+    "typing-extensions>=4.13.2",
+    
+    # Web scraping and automation
+    "crawl4ai>=0.6.3",
+    "playwright>=1.52.0",
+    
+    # External API integrations
     "google-api-python-client>=2.171.0",
     "google-auth>=2.40.3",
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
     "googlemaps>=4.10.0",
-    "httpx>=0.28.1",
-    "langchain-core>=0.3.63",
-    "langchain-openai>=0.3.19",
-    "langgraph>=0.4.8",
-    "mem0ai>=0.1.104",
-    "passlib[bcrypt]>=1.7.4",
-    "playwright>=1.52.0",
-    "pydantic>=2.11.5",
-    "pydantic-settings>=2.9.1",
-    "python-dotenv>=1.1.0",
-    "python-jose[cryptography]>=3.5.0",
-    "python-multipart>=0.0.20",
-    "redis>=6.2.0",
-    "sqlalchemy[asyncio]>=2.0.41",
-    "supabase>=2.15.2",
-    "uvicorn>=0.34.2",
+    "duffel-api>=0.6.2",
+    
+    # Observability and monitoring
+    "opentelemetry-api>=1.21.0",
+    "opentelemetry-sdk>=1.21.0",
+    "opentelemetry-instrumentation-redis>=0.42b0",
+    "opentelemetry-exporter-otlp>=1.21.0",
+    "psutil>=5.9.0",
 ]
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["tripsage", "tripsage_core", "tripsage.*", "tripsage_core.*"]
 
-# Optional dependencies for end-user features
-[project.optional-dependencies]
-dev = [
-    "ruff>=0.11.9", 
-    "pytest>=8.4.0", 
-    "pytest-cov>=6.1.1",
-    "pytest-asyncio>=1.0.0",
-    "pytest-mock>=3.14.1",
-    "coverage[toml]>=7.6.9",
-    "pytest-benchmark>=4.0.0",
-    "pytest-httpx>=0.35.0",
-    "fakeredis>=2.29.0",
-    "nest-asyncio>=1.6.0"
-]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -97,23 +109,35 @@ build-backend = "hatchling.build"
 # Modern dependency groups following PEP 735
 [dependency-groups]
 test = [
+    # Core testing framework
     "pytest>=8.4.0",
     "pytest-asyncio>=1.0.0",
     "pytest-cov>=6.1.1",
     "pytest-mock>=3.14.1",
+    "pytest-timeout>=2.3.1",
+    
+    # Testing utilities and mocking
     "pytest-benchmark>=4.0.0",
     "pytest-httpx>=0.35.0",
-    "coverage[toml]>=7.6.9",
-    "nest-asyncio>=1.6.0",
     "fakeredis>=2.29.0",
+    "nest-asyncio>=1.6.0",
+    
+    # Coverage reporting
+    "coverage[toml]>=7.6.9",
 ]
+
 lint = [
+    # Code formatting and linting
     "ruff>=0.11.9",
     "mypy>=1.8.0",
 ]
+
 dev = [
+    # Include test and lint groups
     {include-group = "test"},
     {include-group = "lint"},
+    
+    # Additional development tools
     "radon>=6.0.1",
 ]
 
