docs: archive old documentation and consolidate TODOs
- Move docs/09_ARCHIVED/ to ARCHIVED_DOCS/ (excluded from repo)
- Consolidate 5 TODO files into single TODO.md
- Remove completed tasks and V2 features from active tracking
- Simplify documentation structure by 70%
- Add key frontend and integration tasks to main TODO

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ worktrees/
 # Archived local files
 .archived/
 repomix-output.*
+# Archived documentation (moved out of main repo)
+ARCHIVED_DOCS/
