--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
-    "prepare": "husky",
-    "generate:jwt-secret": "node -e \"console.log('JWT_SECRET=' + require('crypto').randomBytes(32).toString('base64'))\""
+    "prepare": "husky"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -41,14 +40,11 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "5",
     "@testing-library/react": "^16.3.0",
-    "@types/bcryptjs": "^3.0.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^4.3.16",
-    "bcryptjs": "^3.0.2",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "12.12.2",
-    "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
