--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     
     # Authentication and security
-    "passlib[bcrypt]>=1.7.4",
-    "python-jose[cryptography]>=3.5.0",
-    "cryptography>=45.0.3",
+    # JWT dependencies removed - will be replaced with Supabase Auth
     
     # Data validation and configuration
     "pydantic>=2.11.5",
