--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:biome": "biome lint ./src",
+    "format:biome": "biome format ./src --write",
+    "format:check": "biome format ./src",
+    "biome:check": "biome check ./src",
+    "biome:fix": "biome check ./src --fix",
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:run": "vitest run",
@@ -21,6 +26,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -85,5 +91,10 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
     "vitest": "^3.1.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "prismjs": ">=1.30.0"
+    }
   }
 }
