test: fix import errors and update test assertions
- Fix AuthenticationService import errors (use UserService)
- Fix Activity schema imports (ActivityResponse, ActivityCoordinates)
- Fix Flight model tests (BookingStatus.CANCELLED, validation messages)
- Create comprehensive reset-password-form test suite
- Update e2e chat session tests to remove mock_travel_agent
- Install jose dependencies for websocket tests

Resolves majority of import-related test failures from Pydantic migration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,9 +129,9 @@ dev = [
     # Include test and lint groups
     {include-group = "test"},
     {include-group = "lint"},
-    
     # Additional development tools
     "radon>=6.0.1",
+    "python-jose[cryptography]>=3.5.0",
 ]
 
 [tool.coverage.run]
