--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,6 +86,7 @@
     "eslint-config-next": "15.3.2",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "husky": "^9.1.7",
+    "jose": "^6.0.11",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
