--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,13 +108,12 @@ test = [
     "pytest-cov>=6.1.1",
     "pytest-mock>=3.14.1",
     "pytest-timeout>=2.4.0",
-    
     # Testing utilities and mocking
     "pytest-benchmark>=5.1.0",
     "pytest-httpx>=0.35.0",
     "fakeredis>=2.29.0",
     "nest-asyncio>=1.6.0",
-    
+    "hypothesis>=6.120.0",
     # Coverage reporting
     "coverage[toml]>=7.8.2",
 ]
