--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -76,6 +76,7 @@ pytest-benchmark>=5.1.0
 pytest-httpx>=0.35.0
 fakeredis>=2.29.0
 nest-asyncio>=1.6.0
+hypothesis>=6.120.0
 
 # Coverage reporting
 coverage[toml]>=7.8.2
