fix: resolve critical test failures and linting errors across backend and frontend
- Fix 5 critical trip router test failures with proper Pydantic validation patterns
- Resolve all Python linting errors (F-series and E501 line length violations)
- Add comprehensive coverage tests for TripService, SchemaAdapter, and core models
- Fix frontend accessibility issues with SVG icons (add role="img" and aria-labels)
- Replace array index keys with proper static keys in skeleton components
- Improve TypeScript types by replacing 'any' with 'unknown' in memory interfaces
- Fix test mocking patterns using vi.mocked() instead of 'as any'
- Add missing button type attributes for better accessibility
- Resolve import errors and add proper exception handling in new coverage tests

Tests: 37/37 passing, zero Python linting errors, reduced frontend lint issues by 30

--- a/pytest.ini
+++ b/pytest.ini
@@ -47,6 +47,7 @@ markers =
     auth: Tests for authentication and authorization
     api: Tests for API endpoints
     memory: Tests for memory and personalization features
+    schema: Tests for schema validation and compatibility
 
 # Test execution configuration
 minversion = 6.0
