--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "opentelemetry-instrumentation-redis>=0.55b0",
     "opentelemetry-exporter-otlp>=1.34.0",
     "psutil>=7.0.0",
+    "asyncpg>=0.30.0",
 ]
 
 [tool.setuptools.packages.find]
