--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,43 @@ worktrees/
 repomix-output.*
 # Archived documentation (moved out of main repo)
 ARCHIVED_DOCS/
+
+# Temporary documentation files
+*_SUMMARY.md
+*_REPORT.md
+*_ANALYSIS.md
+*_ASSESSMENT.md
+*_VALIDATION.md
+*_IMPLEMENTATION.md
+!README.md
+!TODO.md
+!CLAUDE.md
+!KNOWLEDGE_PACK.md
+
+# Temporary analysis scripts
+analyze_*.py
+ci_validation_*.py
+run_*_tests.py
+
+# Deployment and validation logs
+deployment_log_*.json
+security_validation_*.json
+*_validation_report.json
+
+# Lint output files
+lint-*.txt
+lint-*.json
+full-lint-*.txt
+
+# Test result files
+test_results.log
+full_test_results.log
+backend_test_results_*.md
+analysis_results.md
+
+# Frontend temporary files
+frontend/lint-*.txt
+frontend/lint-*.json
+frontend/dashboard-*.png
+frontend/*_SUMMARY.md
+frontend/test-debug.test.ts
