fix: update CI bandit command to use pyproject.toml configuration
- Add --config pyproject.toml flag to bandit commands in CI
- Ensures bandit respects the skip configuration for false positives
- Both JSON output and display commands now use the same config

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -73,8 +73,8 @@ jobs:
       run: |
         source .venv/bin/activate
         uv pip install bandit[toml]
-        bandit -r tripsage/ tripsage_core/ -f json -o bandit-report.json || true
-        bandit -r tripsage/ tripsage_core/ -ll  # Show results
+        bandit -r tripsage/ tripsage_core/ -f json -o bandit-report.json --config pyproject.toml || true
+        bandit -r tripsage/ tripsage_core/ -ll --config pyproject.toml  # Show results
 
     - name: Lint with ruff
       run: |
