test: clean up and fix test suite for schema consistency
- Remove duplicate test files and keep most comprehensive versions
- Fix test_rls_policies.py with proper Supabase mocking
- Update test_database_constraints.py with mock migration SQL
- Fix test_schema_alignment.py for Pydantic v2 models
- Remove tests for deprecated functionality
- Consolidate multiple test files for same functionality:
  - Activity service tests
  - Config tests
  - Session security tests
  - Unified search service tests
  - Schema adapter tests
  - Cache service tests
- Rename enhanced test files removing _enhanced suffix
- Keep tests focused on current PR changes per requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,6 +132,7 @@ dev = [
     # Additional development tools
     "radon>=6.0.1",
     "python-jose[cryptography]>=3.5.0",
+    "bandit>=1.8.3",
 ]
 
 [tool.coverage.run]
