fix: resolve environment variable configuration issues
- Fix ENV vs ENVIRONMENT alias mismatch in base settings
- Update test isolation to properly set environment variables
- Configure CI to use ENV=testing for test runs
- Ensure all 51 config tests pass with proper environment handling

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -194,7 +194,7 @@ jobs:
 
     - name: Run unit tests with coverage
       env:
-        ENV: test
+        ENV: testing
         PYTHONPATH: .
         # Database
         SUPABASE_URL: https://test-project.supabase.co
@@ -327,7 +327,7 @@ jobs:
 
     - name: Run integration tests
       env:
-        ENV: test
+        ENV: testing
         PYTHONPATH: .
         # Database
         SUPABASE_URL: https://test-project.supabase.co
@@ -527,7 +527,7 @@ jobs:
 
     - name: Run performance tests
       env:
-        ENV: test
+        ENV: testing
         PYTHONPATH: .
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/tripsage_test
         DRAGONFLY_URL: redis://localhost:6379/0
