refactor(schemas): consolidate CabinClass enum to single canonical location
- Remove duplicate CabinClass definitions from domain/flight.py and business/flight_service.py
- Standardize all imports to use tripsage_core.models.schemas_common.enums.CabinClass
- Update 8 files to use canonical import location across codebase
- Remove CabinClass exports from domain and models __init__.py files
- Verify API routers use consistent schema imports
- All tests pass with consolidated enum structure

This consolidation follows 2025 best practices for Pydantic v2 enum patterns
and ensures maintainable, single-source-of-truth enum definitions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "email-validator>=2.2.0",
     "python-dotenv>=1.1.0",
+    # Performance optimizations
+    "msgpack>=1.1.0",  # Binary serialization for WebSocket performance
     # Database and caching
     "sqlalchemy[asyncio]>=2.0.41",
     "greenlet>=3.2.3",
