feat(deps): modernize dependency management following PEP 735 best practices
- Replace numpy with built-in random module for vector generation (eliminates heavy dependency)
- Remove scripts/benchmarks/requirements.txt (40+ unused dependencies eliminated)
- Add PEP 735 dependency groups in pyproject.toml for benchmark, visualization, profiling, analysis
- Consolidate all dependencies into single source of truth
- Update README.md to reflect modern uv-based installation
- Align with ULTRATHINK principles: KISS, YAGNI, dependency minimization
- Reduce benchmark dependencies from 15+ to 1 essential package (click)
- Enable optional feature installation via dependency groups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,6 +141,33 @@ dev = [
     "bandit>=1.8.3",
 ]
 
+# Scripts and benchmarking dependencies
+benchmark = [
+    # CLI interface for benchmark scripts
+    "click>=8.1.0",
+    # System monitoring (psutil already in main dependencies)
+    # Database connectivity (asyncpg, supabase already in main dependencies)
+]
+
+# Optional visualization capabilities (install only when needed)
+visualization = [
+    "matplotlib>=3.7.0",
+    "plotly>=5.17.0",
+]
+
+# Optional profiling capabilities (install only when needed)  
+profiling = [
+    "memory-profiler>=0.61.0",
+    "line-profiler>=4.1.0",
+]
+
+# Optional data analysis environment
+analysis = [
+    "jupyter>=1.1.1",
+    "ipython>=8.0.0",
+    "pandas>=2.1.0",
+]
+
 [tool.coverage.run]
 branch = true
 source = ["tripsage", "tripsage_core"]
