chore: update .gitignore and remove obsolete test files
- Added Python cache, testing artifacts, IDE, OS, and temporary files to .gitignore for better project cleanliness.
- Removed outdated test files: bandit_output.json, test_database_service_replicas.py, test_api_key_service_cache_failures.py, test_api_key_service_comprehensive.py, test_api_key_service_coverage_focused.py, test_api_key_service_modern.py, test_api_key_service_router_coverage.py, test_api_key_service.py, test_database_service_chaos.py, test_database_service_comprehensive.py, test_database_service_performance.py, test_database_service_stateful.py, test_database_service.py.

This commit enhances project organization by ensuring unnecessary files are excluded from version control and removing obsolete tests that are no longer relevant.

--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,55 @@ scan-results/
 **/*.orig
 **/*.rej
 **/.git/COMMIT_EDITMSG.backup
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Testing artifacts
+.coverage
+.coverage.*
+htmlcov/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.hypothesis/
+mutants/
+.mutmut-cache
+
+# Benchmarking
+benchmark_results_*.json
+performance_metrics_*.json
+*.benchmark
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+*.bak
+*.backup
+*.old
+
+# Environment
+.env
+.env.local
+.env.*.local
+venv/
+env/
+ENV/
