fix(ci): update biome format check command in frontend CI
- Remove deprecated --check flag from biome format command
- Use proper format validation by checking exit code
- Fix compatibility with latest biome version
- Ensure CI passes for frontend formatting checks

--- a/.github/workflows/frontend-ci-simple.yml
+++ b/.github/workflows/frontend-ci-simple.yml
@@ -66,7 +66,11 @@ jobs:
       - name: Lint with Biome
         run: |
           pnpm biome check --reporter=github .
-          pnpm biome format . --check
+          # Check if files need formatting by running format without --write and checking exit code
+          if ! pnpm biome format .; then
+            echo "❌ Files need formatting. Run 'pnpm biome format . --write' to fix."
+            exit 1
+          fi
 
       - name: TypeScript type check
         run: pnpm type-check
