--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
