--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -69,7 +69,7 @@ runs:
     # Cache pnpm dependencies
     - name: Setup pnpm cache
       id: cache-pnpm
-      uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+      uses: actions/cache@v4
       with:
         path: |
           ${{ steps.pnpm-store.outputs.STORE_PATH }}
