--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -72,7 +72,7 @@ runs:
     # Cache uv dependencies
     - name: Cache uv dependencies
       id: cache-uv
-      uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+      uses: actions/cache@v4
       with:
         path: |
           ${{ steps.uv-cache-dir.outputs.dir }}
