--- a/.env.test
+++ b/.env.test
@@ -3,41 +3,31 @@ ENVIRONMENT=testing
 DEBUG=True
 
 # Database configuration (Supabase)
-DATABASE_URL=https://example.supabase.com
-DATABASE_PUBLIC_KEY=test-public-key
-DATABASE_SERVICE_KEY=test-service-key
-DATABASE_JWT_SECRET=test-jwt-secret-for-testing-only
-SECRET_KEY=test-application-secret-key-for-testing-only
-
-# Legacy database settings (for compatibility)
-SUPABASE_URL=https://example.supabase.com
-SUPABASE_KEY=test-key
-SUPABASE_SERVICE_KEY=test-service-key
-TRIPSAGE_SUPABASE_URL=https://example.supabase.com
-TRIPSAGE_SUPABASE_KEY=test-key
+DATABASE_URL=https://your-supabase-project.supabase.co
+DATABASE_PUBLIC_KEY=placeholder-supabase-public-key
+DATABASE_SERVICE_KEY=placeholder-supabase-service-role-key
+DATABASE_JWT_SECRET=placeholder-supabase-jwt-secret
+SECRET_KEY=placeholder-application-secret-key
 
 # Redis/Cache (DragonflyDB)
 REDIS_URL=redis://localhost:6379/1
-REDIS_PASSWORD=tripsage_test_password
+REDIS_PASSWORD=placeholder-redis-password
 DRAGONFLY_URL=redis://localhost:6379/1
-DRAGONFLY_PASSWORD=tripsage_test_password
+DRAGONFLY_PASSWORD=placeholder-redis-password
 
 # AI Services
-OPENAI_API_KEY=sk-test-mock-openai-key-1234567890abcdef
+OPENAI_API_KEY=placeholder-openai-api-key
 OPENAI_MODEL=gpt-4
-ANTHROPIC_API_KEY=sk-ant-test-mock-anthropic-key-1234567890abcdef
+ANTHROPIC_API_KEY=placeholder-anthropic-api-key
 
 # External API Keys (test values)
-WEATHER_API_KEY=test-weather-key
-GOOGLE_MAPS_API_KEY=test-maps-key
-DUFFEL_API_KEY=test-duffel-key
+WEATHER_API_KEY=placeholder-weather-api-key
+GOOGLE_MAPS_API_KEY=placeholder-google-maps-api-key
+DUFFEL_API_KEY=placeholder-duffel-api-key
 
-# Legacy settings (for compatibility)
-NEO4J_URI=bolt://localhost:7687
-NEO4J_USER=neo4j
-NEO4J_PASSWORD=test_password
+# MCP and integration endpoints
 MEMORY_MCP_ENDPOINT=https://memory-mcp.example.com
-MEMORY_MCP_API_KEY=test-memory-key
+MEMORY_MCP_API_KEY=placeholder-memory-api-key
 TRIPSAGE_MEMORY_MCP_URL=http://localhost:8000
 TRIPSAGE_TEST_MODE=true
 
