--- a/supabase/.env.example
+++ b/supabase/.env.example
@@ -10,14 +10,14 @@
 SUPABASE_URL=https://your-project-ref.supabase.co
 
 # Anonymous/Public key - safe to expose in frontend
-SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # Service role key - NEVER expose this publicly
 # Used for admin operations and bypassing RLS
-SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
 # JWT secret for token verification (found in project settings)
-SUPABASE_JWT_SECRET=your-super-secret-jwt-secret
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret
 
 # Project reference ID (used for CLI operations)
 SUPABASE_PROJECT_REF=your-project-ref
@@ -27,10 +27,10 @@ SUPABASE_PROJECT_REF=your-project-ref
 # =============================================================================
 
 # Direct database connection (for migrations and admin tasks)
-DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[PROJECT-REF].supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres:your-database-password@db.your-project-ref.supabase.co:5432/postgres
 
 # Pooled connection string (for application usage)
-DATABASE_POOLER_URL=postgresql://postgres.[PROJECT-REF]:[YOUR-PASSWORD]@aws-0-[REGION].pooler.supabase.com:5432/postgres
+DATABASE_POOLER_URL=postgresql://postgres.your-project-ref:your-database-password@aws-0-your-region.pooler.supabase.com:5432/postgres
 
 # Database settings
 DB_SSL_MODE=require
@@ -42,18 +42,18 @@ DB_POOL_SIZE=20
 # =============================================================================
 
 # OpenAI API Configuration
-OPENAI_API_KEY=sk-...
+OPENAI_API_KEY=your-openai-api-key
 OPENAI_MODEL=gpt-4-turbo-preview
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2000
 
 # Email Service Configuration (Resend)
-RESEND_API_KEY=re_...
+RESEND_API_KEY=your-resend-api-key
 RESEND_FROM_EMAIL=noreply@tripsage.com
 RESEND_FROM_NAME=TripSage
 
 # Webhook Security
-WEBHOOK_SECRET=whsec_...
+WEBHOOK_SECRET=your-webhook-secret
 WEBHOOK_TIMEOUT_MS=30000
 
 # External API Keys
@@ -161,8 +161,8 @@ NODE_ENV=development
 DEPLOYMENT_ENV=local
 
 # CI/CD
-GITHUB_TOKEN=ghp_...
-VERCEL_TOKEN=your_vercel_token
+GITHUB_TOKEN=your-github-token
+VERCEL_TOKEN=your-vercel-token
 DEPLOY_PREVIEW_URL=https://preview.tripsage.com
 
 # =============================================================================
@@ -178,15 +178,15 @@ INTERCOM_APP_ID=your_intercom_app_id
 ZENDESK_SUBDOMAIN=tripsage
 
 # Payment Processing (if needed)
-STRIPE_PUBLIC_KEY=pk_test_...
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
+STRIPE_PUBLIC_KEY=your-stripe-public-key
+STRIPE_SECRET_KEY=your-stripe-secret-key
+STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
 
 # =============================================================================
 # CACHE CONFIGURATION (DragonflyDB)
 # =============================================================================
 
-REDIS_URL=redis://default:tripsage_secure_password@localhost:6379/0
+REDIS_URL=redis://default:your-redis-password@localhost:6379/0
 REDIS_TLS_ENABLED=false
 REDIS_MAX_RETRIES=3
 REDIS_RETRY_DELAY_MS=1000
