--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,7 @@ worktrees/
 
 # Archived documentation (moved out of main repo)
 ARCHIVED_DOCS/
+docs/archive/
 repomix-output.*
 
 # Temporary documentation files
