--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ on:
       - 'scripts/**'
       - 'supabase/**'
       - 'tests/**'
+      - 'requirements*.txt'
+      - 'requirements/**'
+      - 'constraints*.txt'
       - 'frontend/**'
       - 'uv.lock'
       - 'pyproject.toml'
@@ -25,6 +28,9 @@ on:
       - 'scripts/**'
       - 'supabase/**'
       - 'tests/**'
+      - 'requirements*.txt'
+      - 'requirements/**'
+      - 'constraints*.txt'
       - 'frontend/**'
       - 'uv.lock'
       - 'pyproject.toml'
