chore: root cleanup and docs consolidation
- remove unused setup.py and dependency-check-suppressions.xml
- ignore CLAUDE.md and extend untrack script (does not delete file)
- move standalone config test to tests/unit/test_config_standalone.py
- consolidate security testing guidance into docs/developers/testing-guide.md

--- a/.gitignore
+++ b/.gitignore
@@ -183,7 +183,7 @@ repomix-output.*
 *_DEBUG.md
 !README.md
 !TODO.md
-!CLAUDE.md
+CLAUDE.md
 !KNOWLEDGE_PACK.md
 # Exception for security documentation
 !docs/operators/RLS_IMPLEMENTATION.md
